Move file contents for tests to files in resources.
Also, reduce the time required to run SVN tests.